examples/errors/error_invalid_escape.cay
// Error测试：无效转义序列
public class TestInvalidEscape {
    public static void main() {
        String s = "\x";
        println(s);
    }
}
